--- a/Automation/Automation.App/Views/WorkPages/Tasks/Execute/TaskExecuteModal.xaml
+++ b/Automation/Automation.App/Views/WorkPages/Tasks/Execute/TaskExecuteModal.xaml
@@ -1,10 +1,10 @@
 ﻿<UserControl
-    x:Class="Automation.App.Views.WorkPages.Tasks.TaskExecuteModal"
+    x:Class="Automation.App.Views.WorkPages.Tasks.Execute.TaskExecuteModal"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-    xmlns:local="clr-namespace:Automation.App.Views.WorkPages.Tasks"
+    xmlns:local="clr-namespace:Automation.App.Views.WorkPages.Tasks.Execute"
     xmlns:fonts="clr-namespace:Joufflu.Shared.Resources.Fonts;assembly=Joufflu.Shared"
     MinHeight="400"
     MinWidth="400">
