--- a/Automation/Automation.App/Views/WorkPages/Tasks/Execute/TaskSchedules.xaml
+++ b/Automation/Automation.App/Views/WorkPages/Tasks/Execute/TaskSchedules.xaml
@@ -6,7 +6,7 @@
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:local="clr-namespace:Automation.App.Views.WorkPages.Tasks.Execute"
     xmlns:fonts="clr-namespace:Joufflu.Shared.Resources.Fonts;assembly=Joufflu.Shared"
-    xmlns:inputs="clr-namespace:Joufflu.Inputs.Components;assembly=Joufflu.Inputs"
+    xmlns:inputs="clr-namespace:Joufflu.Inputs;assembly=Joufflu.Inputs"
     mc:Ignorable="d"
     d:DesignHeight="450"
     d:DesignWidth="800">
