--- a/Automation/Automation.App/Views/WorkPages/Tasks/Instances/InstanceDetailModal.xaml
+++ b/Automation/Automation.App/Views/WorkPages/Tasks/Instances/InstanceDetailModal.xaml
@@ -1,5 +1,5 @@
 ﻿<UserControl
-    x:Class="Automation.App.Views.WorkPages.Tasks.Instances.InstanceDetail"
+    x:Class="Automation.App.Views.WorkPages.Tasks.Instances.InstanceDetailModal"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
@@ -7,7 +7,7 @@
     xmlns:local="clr-namespace:Automation.App.Views.WorkPages.Tasks.Instances"
     xmlns:packageComponents="clr-namespace:Automation.App.Views.PackagesPages.Components"
     MinWidth="400">
-    <Grid DataContext="{Binding Instance, RelativeSource={RelativeSource AncestorType=local:InstanceDetail}}" Margin="2">
+    <Grid DataContext="{Binding Instance, RelativeSource={RelativeSource AncestorType=local:InstanceDetailModal}}" Margin="2">
         <Grid.RowDefinitions>
             <RowDefinition Height="auto" />
             <RowDefinition />
@@ -31,7 +31,7 @@
                 MinHeight="100"
                 Grid.Row="1"
                 IsReadOnly="True"
-                Text="{Binding ContextJson, Mode=OneWay, RelativeSource={RelativeSource AncestorType=local:InstanceDetail}}" />
+                Text="{Binding ContextJson, Mode=OneWay, RelativeSource={RelativeSource AncestorType=local:InstanceDetailModal}}" />
         </Grid>
 
         <Grid Grid.Row="2">
@@ -45,7 +45,7 @@
                 MinHeight="100"
                 Grid.Row="1"
                 IsReadOnly="True"
-                Text="{Binding ResultJson, Mode=OneWay, RelativeSource={RelativeSource AncestorType=local:InstanceDetail}}" />
+                Text="{Binding ResultJson, Mode=OneWay, RelativeSource={RelativeSource AncestorType=local:InstanceDetailModal}}" />
         </Grid>
 
         <UniformGrid
