--- a/Automation/Automation.App/Views/WorkPages/Tasks/TaskPage.xaml
+++ b/Automation/Automation.App/Views/WorkPages/Tasks/TaskPage.xaml
@@ -7,6 +7,7 @@
     xmlns:local="clr-namespace:Automation.App.Views.WorkPages.Tasks"
     xmlns:components="clr-namespace:Automation.App.Views.WorkPages.Components"
     xmlns:instances="clr-namespace:Automation.App.Views.WorkPages.Tasks.Instances"
+    xmlns:data="clr-namespace:Joufflu.Data;assembly=Joufflu.Data"
     xmlns:fonts="clr-namespace:Joufflu.Shared.Resources.Fonts;assembly=Joufflu.Shared"
     mc:Ignorable="d">
     <Grid>
@@ -26,7 +27,7 @@
                         <TextBlock Margin="4,0,0,0">History</TextBlock>
                     </StackPanel>
                 </TabItem.Header>
-                <instances:ScopedInstanceList TargetId="{Binding Task.Id}" Type="Task" />
+                <instances:TaskHistory Task="{Binding Task}" />
             </TabItem>
         </TabControl>
         <Button
