--- a/Automation/Automation.App/Views/WorkPages/Tasks/Instances/TaskExecuteModal.xaml
+++ b/Automation/Automation.App/Views/WorkPages/Tasks/Instances/TaskExecuteModal.xaml
@@ -4,7 +4,7 @@
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-    xmlns:local="clr-namespace:Automation.App.Views.WorkPages.Tasks.Schedule"
+    xmlns:local="clr-namespace:Automation.App.Views.WorkPages.Tasks.Instances"
     xmlns:fonts="clr-namespace:Joufflu.Shared.Resources.Fonts;assembly=Joufflu.Shared"
     MinHeight="400"
     MinWidth="400">
