--- a/Automation/Automation.App/Views/WorkPages/Tasks/TaskPage.xaml
+++ b/Automation/Automation.App/Views/WorkPages/Tasks/TaskPage.xaml
@@ -19,7 +19,7 @@
                 <TabItem.Header>
                     <StackPanel Orientation="Horizontal">
                         <fonts:Icon Text="{x:Static fonts:IconFont.Calendar}" />
-                        <TextBlock Margin="4,0,0,0">Executions</TextBlock>
+                        <TextBlock Margin="4,0,0,0">Schedules</TextBlock>
                     </StackPanel>
                 </TabItem.Header>
             </TabItem>
@@ -27,7 +27,7 @@
                 <TabItem.Header>
                     <StackPanel Orientation="Horizontal">
                         <fonts:Icon Text="{x:Static fonts:IconFont.Clock}" />
-                        <TextBlock Margin="4,0,0,0">History</TextBlock>
+                        <TextBlock Margin="4,0,0,0">Executions history</TextBlock>
                     </StackPanel>
                 </TabItem.Header>
                 <instances:TaskHistory Task="{Binding Task}" />
