--- a/Automation/Automation.App/Views/WorkPages/Tasks/Instances/TaskProgressionModal.xaml
+++ b/Automation/Automation.App/Views/WorkPages/Tasks/Instances/TaskProgressionModal.xaml
@@ -4,38 +4,20 @@
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-    xmlns:local="clr-namespace:Automation.App.Views.WorkPages.Tasks.Schedule"
+    xmlns:local="clr-namespace:Automation.App.Views.WorkPages.Tasks.Instances"
     xmlns:adonisUi="clr-namespace:AdonisUI;assembly=AdonisUI"
     xmlns:fonts="clr-namespace:Joufflu.Shared.Resources.Fonts;assembly=Joufflu.Shared"
     mc:Ignorable="d"
     d:DesignHeight="450"
-    d:DesignWidth="800">
-    <Grid>
+    d:DesignWidth="800"
+    x:Name="ParentContainer">
+    <Grid DataContext="{Binding ElementName=ParentContainer}">
         <Grid.RowDefinitions>
-            <RowDefinition />
+            <RowDefinition Height="auto" />
             <RowDefinition />
         </Grid.RowDefinitions>
 
-        <StackPanel VerticalAlignment="Center" HorizontalAlignment="Center">
-            <StackPanel Orientation="Horizontal" HorizontalAlignment="Center">
-                <ContentControl
-                    ContentTemplate="{DynamicResource {x:Static adonisUi:Templates.LoadingBars}}"
-                    Foreground="{DynamicResource {x:Static adonisUi:Brushes.ForegroundBrush}}"
-                    Width="24"
-                    Height="24"
-                    Focusable="False" />
-                <TextBlock VerticalAlignment="Center">Task running ...</TextBlock>
-            </StackPanel>
-            <StackPanel Orientation="Horizontal" HorizontalAlignment="Center">
-                <fonts:Icon Text="{x:Static fonts:IconFont.CircleExclamation}" />
-                <TextBlock
-                    VerticalAlignment="Center"
-                    Margin="4,0,0,0"
-                    FontSize="10">
-                    Task prgoress
-                </TextBlock>
-            </StackPanel>
-        </StackPanel>
+        <local:TaskInstanceSummary Instance="{Binding Instance}" Margin="2" />
 
         <DataGrid Grid.Row="1">
             <DataGrid.Columns>
