--- a/Automation/Automation.App/Views/WorkPages/Tasks/Instances/TaskExecuteModal.xaml
+++ b/Automation/Automation.App/Views/WorkPages/Tasks/Instances/TaskExecuteModal.xaml
@@ -32,13 +32,13 @@
             Grid.Row="1"
             Margin="2"
             HorizontalAlignment="Right">
-            <Button Margin="2,0" Command="{Binding ParentLayout.CloseCommand}">
+            <Button Margin="2,0" Command="{Binding ParentLayout.HideCommand}">
                 <StackPanel Orientation="Horizontal">
                     <fonts:Icon Text="{x:Static fonts:IconFont.Xmark}" />
                     <TextBlock Margin="4,0,0,0">Cancel</TextBlock>
                 </StackPanel>
             </Button>
-            <Button Command="{Binding ParentLayout.ValidateCommand}">
+            <Button Click="ButtonExecute_Click">
                 <StackPanel Orientation="Horizontal">
                     <fonts:Icon Text="{x:Static fonts:IconFont.Play}" />
                     <TextBlock Margin="4,0,0,0" Text="Execute" />
